--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "keet.js single-page app sample",
   "main": "index.js",
   "scripts": {
-    "start": "parcel view/layout.pug"
+    "start": "parcel view/index.pug",
+    "build": "parcel build src/app.js && parcel build src/styles/base.styl && cp src/statics/favicon.ico dist/favicon.ico"
   },
   "repository": {
     "type": "git",
@@ -19,13 +20,21 @@
     "url": "https://github.com/syarul/keet-example-app/issues"
   },
   "homepage": "https://github.com/syarul/keet-example-app#readme",
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.2",
+    "morgan": "^1.9.0",
+    "multiparty": "^4.1.3",
+    "pug": "^2.0.0-rc.4"
+  },
   "devDependencies": {
     "babel-plugin-istanbul": "^4.1.5",
-    "stylus": "^0.54.5",
     "babel-preset-env": "^1.6.1",
     "keet": "^2.2.5-rc2",
     "parcel-bundler": "^1.4.1",
-    "parcel-plugin-pug": "^0.2.4"
+    "parcel-plugin-pug": "^0.2.4",
+    "stylus": "^0.54.5",
+    "uglify-es": "^3.3.7"
   }
 }
