--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "devDependencies": {
     "babel-plugin-istanbul": "^4.1.5",
     "babel-preset-env": "^1.6.1",
-    "keet": "^2.2.5-rc2",
+    "keet": "file:keet",
     "parcel-bundler": "^1.4.1",
     "parcel-plugin-pug": "^0.2.4",
     "stylus": "^0.54.5",
