--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel view/index.pug",
-    "build": "parcel build src/app.js && parcel build src/styles/base.styl && cp src/statics/favicon.ico dist/favicon.ico"
+    "build": "parcel build src/app.js && parcel build src/styles/base.styl && cp src/statics/favicon.ico dist/favicon.ico",
+    "js": "parcel build src/app.js"
   },
   "repository": {
     "type": "git",
